--- a/index.html
+++ b/index.html
@@ -3497,27 +3497,27 @@
             PROJECTS </a> </h2>
     <div class="flex-container proj-box-cont">
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
-            <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
-                style="margin: auto; margin-top: 2vh;"> </iframe>
-
+            <h3 style="color: #dcf4fc; margin: auto;">My Portfolio</h3>
+            <div class="fade-in2 box3 ">
+                <img src="My Projects.png">
+            </div>
             <p class="project-text" style="color: #FB8500; text-align: left;">
-                SKILLS: </p>
-            <p class="skill-text" style="text-align: left;"> PyTorch, Kaggle,
-                Cloud-instance, Google Search API </p>
+                SKILLS:
+            </p>
+            <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
 
-            <div class="learn-more"><a href="#Chatbot" class="link-orange"> Click for More Information </a></div>
-            <div id="Chatbot" class="modal">
+            <div class="learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
+            <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        A chatbot to raise mental health awareness...
+                        A personal website designed and created from scratch...
                     </h2>
                     <br>
-                    <p class="project-desc"> A conversational A.I.-based agent utilizing generative
-                        learning and Google
-                        Search API to provide
-                        responses
-                        to mental health questions and respective links to resources. </p>
+                    <div>
+                        <p class="project-title" class="project-desc"> Developed portfolio website from scratch to
+                            showcase my
+                            bio, education, projects, honors, and contact information. </p>
+                    </div>
                     <br>
                     <a href="#Projects" class="box-close">
                         X
@@ -3526,25 +3526,22 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">BioKnee 1.0</h3>
-            <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/AcX9qemFgyg"
-                style="margin: auto; margin-top: 2vh;"> </iframe>
+            <h3 style="color: #dcf4fc; margin: auto;"> For Michigan Website</h3>
+            <div class="fade-in2 box3 ">
+                <img src="ForMichigan.png">
+            </div>
 
-            <p class="project-text" style="color: #FB8500; text-align: left;">
-                SKILLS:
-            </p>
-            <p class="skill-text" style="text-align: left;"> Electrical Circuits,
-                Python, Programming </p>
+            <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
+            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development </p>
 
-            <div class="learn-more"><a href="#Knee" class="link-orange"> Click for More Information </a></div>
-            <div id="Knee" class="modal">
+            <div class="learn-more"><a href="#ForMich" class="link-orange"> Click for More Information </a></div>
+            <div id="ForMich" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        A mechanical knee rehabilation technology to help with ACL injury recoveries...
+                        An interactive website for an organization aiming to increase voter turnout among college students...
                     </h2>
                     <br>
-                    <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments
-                        technology in order to help with knee rehabilitation, especially with ACL tears. </p>
+                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded with interactive features, such as color changing background on click, and personalized voting information pages for each college. Check it out at www.4mich.org.
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3588,6 +3585,31 @@
     <br>
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;"> Equity Initiative: STEM+ for Underrepresented Students </h3>
+            <p class="project-text" style="color: #FB8500; text-align: left;">
+                SKILLS:
+            </p>
+            <p class=" skill-text" style="text-align: left;"> Leadership, Presentation </p>
+
+            <div class="learn-more"><a href="#DEI" class="link-orange"> Click for More Information </a></div>
+            <div id="DEI" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        An equity initiative focused on providing more opportunities, such as internships and engineering kits, to underrepresented students aspiring to pursue STEM...
+                    </h2>
+                    <br>
+                    <div>
+                        <p class="project-title" class="project-desc"> Proposed and led an initivate to encourage the school district's underrepresented students to pursue their aspirations in STEMs. Presented to the Board of Education numerous times on plausible solutions to bring more opportunities for these students in a feasible and doable manner. Secured and worked with a grant to distribute calculators and engineering kits to underresourced schools within the district. </p>
+                    </div>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div class="fade-in2 box3 ">
                 <img src="aihandwritingmodel.png">
@@ -3617,54 +3639,27 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">PenguJump</h3>
+            <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
+            <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
+                style="margin: auto; margin-top: 2vh;"> </iframe>
 
             <p class="project-text" style="color: #FB8500; text-align: left;">
                 SKILLS: </p>
-            <p class="skill-text" style="text-align: left;"> GreenFootAPI, Java, Object-Oriented
-                Programming </p>
+            <p class="skill-text" style="text-align: left;"> PyTorch, Kaggle,
+                Cloud-instance, Google Search API </p>
 
-            <div class="learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
-            <div id="Game" class="modal">
+            <div class="learn-more"><a href="#Chatbot" class="link-orange"> Click for More Information </a></div>
+            <div id="Chatbot" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An object-oriented-programming-based user engaging video game...
+                        A chatbot to raise mental health awareness...
                     </h2>
                     <br>
-                    <div>
-                        <p class="project-desc"> An interactive game developed with GreenFoot API and
-                            Java utilizing
-                            object-oriented programming and inheritance. </p>
-                    </div>
-                    <br>
-                    <a href="#Projects" class="box-close">
-                        X
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">My Portfolio</h3>
-            <div class="fade-in2 box3 ">
-                <img src="My Projects.png">
-            </div>
-            <p class="project-text" style="color: #FB8500; text-align: left;">
-                SKILLS:
-            </p>
-            <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
-
-            <div class="learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
-            <div id="Portfolio" class="modal">
-                <div class="content">
-                    <h2 style="text-align: center; color: #8ECAE6;">
-                        A personal website designed and created from scratch...
-                    </h2>
-                    <br>
-                    <div>
-                        <p class="project-title" class="project-desc"> Developed portfolio website from scratch to
-                            showcase my
-                            bio, education, projects, honors, and contact information. </p>
-                    </div>
+                    <p class="project-desc"> A conversational A.I.-based agent utilizing generative
+                        learning and Google
+                        Search API to provide
+                        responses
+                        to mental health questions and respective links to resources. </p>
                     <br>
                     <a href="#Projects" class="box-close">
                         X
@@ -3675,31 +3670,6 @@
     </div>
     <br>
     <div class="flex-container proj-box-cont add_margin">
-        <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> For Michigan Website</h3>
-            <div class="fade-in2 box3 ">
-                <img src="ForMichigan.png">
-            </div>
-
-            <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
-            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development </p>
-
-            <div class="learn-more"><a href="#ForMich" class="link-orange"> Click for More Information </a></div>
-            <div id="ForMich" class="modal">
-                <div class="content">
-                    <h2 style="text-align: center; color: #8ECAE6;">
-                        An interactive website for an organization aiming to increase voter turnout among college students...
-                    </h2>
-                    <br>
-                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded with interactive features, such as color changing background on click, and personalized voting information pages for each college. Check it out at www.4mich.org.
-                    </p>
-                    <br>
-                    <a href="#Projects" class="box-close">
-                        X
-                    </a>
-                </div>
-            </div>
-        </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">RoboPicasso</h3>
             <div class="fade-in2 box3 ">
@@ -3727,21 +3697,52 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> Equity Initiative: STEM+ for Underrepresented Students </h3>
+            <h3 style="color: #dcf4fc; margin: auto;">BioKnee 1.0</h3>
+            <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/AcX9qemFgyg"
+                style="margin: auto; margin-top: 2vh;"> </iframe>
+
             <p class="project-text" style="color: #FB8500; text-align: left;">
                 SKILLS:
             </p>
-            <p class=" skill-text" style="text-align: left;"> Leadership, Presentation </p>
+            <p class="skill-text" style="text-align: left;"> Electrical Circuits,
+                Python, Programming </p>
 
-            <div class="learn-more"><a href="#DEI" class="link-orange"> Click for More Information </a></div>
-            <div id="DEI" class="modal">
+            <div class="learn-more"><a href="#Knee" class="link-orange"> Click for More Information </a></div>
+            <div id="Knee" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An equity initiative focused on providing more opportunities, such as internships and engineering kits, to underrepresented students aspiring to pursue STEM...
+                        A mechanical knee rehabilation technology to help with ACL injury recoveries...
+                    </h2>
+                    <br>
+                    <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments
+                        technology in order to help with knee rehabilitation, especially with ACL tears. </p>
+                    </p>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;">PenguJump</h3> <!--replace with gemini project-->
+
+            <p class="project-text" style="color: #FB8500; text-align: left;">
+                SKILLS: </p>
+            <p class="skill-text" style="text-align: left;"> GreenFootAPI, Java, Object-Oriented
+                Programming </p>
+
+            <div class="learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
+            <div id="Game" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        An object-oriented-programming-based user engaging video game...
                     </h2>
                     <br>
                     <div>
-                        <p class="project-title" class="project-desc"> Proposed and led an initivate to encourage the school district's underrepresented students to pursue their aspirations in STEMs. Presented to the Board of Education numerous times on plausible solutions to bring more opportunities for these students in a feasible and doable manner. Secured and worked with a grant to distribute calculators and engineering kits to underresourced schools within the district. </p>
+                        <p class="project-desc"> An interactive game developed with GreenFoot API and
+                            Java utilizing
+                            object-oriented programming and inheritance. </p>
                     </div>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3750,6 +3751,7 @@
                 </div>
             </div>
         </div>
+       
     </div>
 
 
