--- a/index.html
+++ b/index.html
@@ -798,6 +798,7 @@
                 margin-top: 20vh;
                 animation-delay: 2s;
                 text-align: center;
+                box-shadow: 0em 1em 1em #8ECAE6; 
             }
 
             .box-dim {
@@ -813,6 +814,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
+                box-shadow: 0em 1em 1em #8ECAE6; 
             }
 
             .proj-cont {
@@ -836,6 +838,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 0em 1em 1em #8ECAE6; 
             }
 
             .contact-me-cont {
@@ -1908,6 +1911,7 @@
                 margin-top: 30vh;
                 animation-delay: 2s;
                 text-align: center;
+                box-shadow: 0em 1em 1em #8ECAE6; 
             }
 
             .box-dim {
@@ -1923,6 +1927,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
+                box-shadow: 0 1em 1em #8ECAE6; 
             }
 
             .proj-cont {
@@ -1946,6 +1951,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 0em 1em 1em #8ECAE6; 
             }
 
             .contact-me-cont {
@@ -2929,6 +2935,7 @@
                 margin-top: 50vh;
                 text-align: left;
                 align-items: left;
+                box-shadow: 1em 1em 1em #8ECAE6; 
             }
 
             .box-dim {
@@ -2947,6 +2954,7 @@
                 width: 35vw;
                 text-align: right;
                 align-items: right;
+                box-shadow: 1em 1em 1em #8ECAE6; 
             }
 
             .proj-cont {
@@ -3466,7 +3474,7 @@
             </p>
         </div>
 
-        <div class="fade-in1 box box-dim" style = "vertical-align: middle;">
+        <div class="fade-in1 box box-dim" style = "vertical-align: middle; filter: drop-shadow( 0 0 2em #fb86008d)">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
         </div>
@@ -3815,6 +3823,7 @@
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
+        <br>
         <br>
         <div class="center-inline" style="align-self: auto;">
             <span class="dot" onclick="currentSlide(1)"></span>
