--- a/index.html
+++ b/index.html
@@ -3481,7 +3481,7 @@
     </div>
 
     <div class="flex-container educimg">
-        <div class=" fade-in2 box2">
+        <div class=" fade-in2 box2" style="filter: drop-shadow( 0 0 2em #ffb8038f)">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
