--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                 margin-top: 20vh;
                 animation-delay: 2s;
                 text-align: center;
-                box-shadow: 0em 1em 1em #8ECAE6; 
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .box-dim {
@@ -814,7 +814,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
-                box-shadow: 0em 1em 1em #8ECAE6; 
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .proj-cont {
@@ -838,7 +838,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ECAE6; 
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .contact-me-cont {
@@ -847,6 +847,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
 
@@ -1911,7 +1912,7 @@
                 margin-top: 30vh;
                 animation-delay: 2s;
                 text-align: center;
-                box-shadow: 0em 1em 1em #8ECAE6; 
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .box-dim {
@@ -1927,7 +1928,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
-                box-shadow: 0 1em 1em #8ECAE6; 
+                box-shadow: 0 1em 1em #8ecae650; 
             }
 
             .proj-cont {
@@ -1951,7 +1952,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ECAE6; 
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .contact-me-cont {
@@ -1960,6 +1961,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 0em 1em 1em #8ecae650; 
             }
 
             .contact-text {
@@ -2935,7 +2937,7 @@
                 margin-top: 50vh;
                 text-align: left;
                 align-items: left;
-                box-shadow: 1em 1em 1em #8ECAE6; 
+                box-shadow: 1em 1em 1em #8ecae650; 
             }
 
             .box-dim {
@@ -2954,7 +2956,7 @@
                 width: 35vw;
                 text-align: right;
                 align-items: right;
-                box-shadow: 1em 1em 1em #8ECAE6; 
+                box-shadow: 1em 1em 1em #8ecae650; 
             }
 
             .proj-cont {
@@ -2982,6 +2984,7 @@
                 width: 60vw;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 1em 1em 1em #8ecae650;
             }
 
             .flex-container-proj-2 {
@@ -3060,6 +3063,7 @@
                 width: 60vw;
                 margin-left: auto;
                 margin-right: auto;
+                box-shadow: 1em 1em 1em #8ecae650; 
             }
 
             /* add flip card effect for phones */
