--- a/index.html
+++ b/index.html
@@ -3478,7 +3478,7 @@
             </p>
         </div>
 
-        <div class="fade-in1 box box-dim" style = "vertical-align: middle; filter: drop-shadow( 0 0 2em #fb86008d)">
+        <div class="fade-in1 box box-dim" style = "vertical-align: middle; box-shadow: 0 0 1em #fb86008d;">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
         </div>
