--- a/index.html
+++ b/index.html
@@ -3478,14 +3478,14 @@
             </p>
         </div>
 
-        <div class="fade-in1 box box-dim" style = "vertical-align: middle; box-shadow: 0 0 1em #fb86008d;">
+        <div class="fade-in1 box box-dim" style = "vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
         </div>
     </div>
 
     <div class="flex-container educimg">
-        <div class=" fade-in2 box2" style="filter: drop-shadow( 0 0 2em #ffb8038f)">
+        <div class=" fade-in2 box2" style="box-shadow: 0 0 3em #ffb8038f;">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
