--- a/index.html
+++ b/index.html
@@ -3872,13 +3872,19 @@
         &nbsp; &nbsp; 
         <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce"></i> </a>
         &nbsp; &nbsp;
-        <i class="fa-brands fa-google fa-bounce"
+        
+        <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-align-center fa-bounce fa-envelope"></i></a>
+        &nbsp; &nbsp; 
+
+        <!--<i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             <span class="google-hover-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
-        </i>
+        </i>-->
+
+
         <!-- &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce">
             <span class="file-lines-text"
