--- a/index.html
+++ b/index.html
@@ -3491,7 +3491,7 @@
         <div class="fade-in2 right-oriented education">
             <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
             <p> University of Michigan - Ann Arbor </p>
-            <p> Bachelor of Science in Engineering in Computer Science </p>
+            <p> Bachelor of Science in Engineering in Computer Science, Minor in Electrical Engineering </p>
             <p> Expected Graduation: April 2026 </p>
             <p> Coursework: <br> EECS 280: Programming and Data Structures <br> EECS 203: Discrete Mathematics <br>
                 ENGR
@@ -3874,7 +3874,7 @@
         &nbsp; &nbsp;
         
         <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-align-center fa-bounce fa-envelope"></i></a>
-        
+        <i class="fa-solid fa-envelope"></i>
 
         <!--<i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
