--- a/index.html
+++ b/index.html
@@ -3874,7 +3874,7 @@
         &nbsp; &nbsp;
         
         <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-align-center fa-bounce fa-envelope"></i></a>
-        <i class="fa-solid fa-envelope"></i>
+        <i class="fa-solid fa-bounce fa-envelope"></i>
 
         <!--<i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
