--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 color: #c99b26;
             }
 
-            .fa-google {
+            .fa-envelope {
                 color: #c99b26;
                 cursor: pointer;
             }
@@ -367,7 +367,7 @@
                 animation: none;
             }
 
-            .fa-google:hover {
+            .fa-envelope:hover {
                 color: #023047;
                 /* Adjust the color of the text as needed */
                 transition: 0.1s;
@@ -380,7 +380,7 @@
                 animation: none;
             }
 
-            .google-hover-text {
+            /*.google-hover-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -392,7 +392,7 @@
 
             .fa-google:hover .google-hover-text {
                 visibility: visible;
-            }
+            }*/
 
 
             .box__bg {
@@ -1458,7 +1458,7 @@
                 color: #c99b26;
             }
 
-            .fa-google {
+            .fa-envelope {
                 color: #c99b26;
                 cursor: pointer;
             }
@@ -1479,7 +1479,7 @@
                 animation: none;
             }
 
-            .fa-google:hover {
+            .fa-envelope:hover {
                 color: #023047;
                 /* Adjust the color of the text as needed */
                 transition: 0.1s;
@@ -1492,7 +1492,7 @@
                 animation: none;
             }
 
-            .google-hover-text {
+            /*.google-hover-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -1504,7 +1504,7 @@
 
             .fa-google:hover .google-hover-text {
                 visibility: visible;
-            }
+            }*/
 
 
             .box__bg {
@@ -2453,7 +2453,7 @@
                 color: #c99b26;
             }
 
-            .fa-google {
+            .fa-envelope {
                 color: #c99b26;
                 cursor: pointer;
             }
@@ -2474,7 +2474,7 @@
                 animation: none;
             }
 
-            .fa-google:hover {
+            .fa-envelope:hover {
                 color: #023047;
                 /* Adjust the color of the text as needed */
                 transition: 0.1s;
@@ -2511,7 +2511,7 @@
                 visibility: visible;
             }
 
-            .google-hover-text {
+            /*.google-hover-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -2523,7 +2523,7 @@
 
             .fa-google:hover .google-hover-text {
                 visibility: visible;
-            }
+            }*/
 
 
             .box__bg {
@@ -3874,7 +3874,7 @@
         &nbsp; &nbsp;
         
         <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-align-center fa-bounce fa-envelope"></i></a>
-        <i class="fa-solid fa-bounce fa-envelope"></i>
+        <i class="fa-solid fa-bounce fa-align-center fa-envelope"></i>
 
         <!--<i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
