--- a/index.html
+++ b/index.html
@@ -2123,6 +2123,16 @@
 
             .container-about-me {
                 margin-top: 50vh;
+                display: inline-flex; 
+            }
+            .center-box{
+                justify-content: center;
+                align-items: center;
+                display: flex; 
+                align-self: center;
+                vertical-align: middle;
+                text-align: center;
+                width: 50vw;
             }
 
             .container2 {
@@ -2588,10 +2598,6 @@
                 align-self: right;
                 text-align: right;
                 float: right;
-                margin-right: 5vw;
-                margin-top: auto;
-                margin-bottom: auto;
-                margin-left: auto;
                 /* transform: translateX(70%); */
             }
 
@@ -2941,7 +2947,6 @@
             }
 
             .box-dim {
-                margin-left: auto;
                 margin-top: 50vh;
             }
 
@@ -3459,6 +3464,7 @@
     </div>
 
     <div class="container-about-me">
+        <div class="center-box">
         <div class=" fade-in1 left-oriented about-me">
             <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
@@ -3477,10 +3483,12 @@
                 real-world problems in underresourced communities.
             </p>
         </div>
-
+        </div>
+        <div class="center-box">
         <div class="fade-in1 box box-dim" style = "vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
+        </div>
         </div>
     </div>
 
